Rewrite the tasks to allow for multiple pokemon, regions etc